cmake_minimum_required(VERSION 3.15)

# Переменные
set(CMAKE_CXX_STANDARD 17)

# Расположение файлов библиотеки
#FILE(GLOB_RECURSE INCLUDES ${RESOURCES_SOURCE}/Resources.h)
FILE(GLOB_RECURSE SOURCE ${RESOURCES_SOURCE}/Resources.cpp)
FILE(GLOB_RECURSE RESOURCES_FILES ${RESOURCES_SOURCE_FILES}/*)
#source_group(TREE ${RESOURCES_SOURCE} TREE PREFIX "" FILES ${INCLUDES} ${SOURCE} ${RESOURCES_FILES})
source_group(TREE ${RESOURCES_SOURCE} TREE PREFIX "" FILES ${SOURCE} ${RESOURCES_FILES})

# Создание статической библиотеки
#add_library(${RESOURCES_NAME} STATIC ${INCLUDES} ${SOURCE} ${RESOURCES_FILES})
add_library(${RESOURCES_NAME} STATIC ${SOURCE} ${RESOURCES_FILES})
